tests/snapshots/execution_spec__auth-jwt.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "scalar": "data from public scalar",
      "nested": {
        "name": "nested name"
      }
    }
  }
}
