tests/snapshots/execution_spec__auth-protected-without-auth.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "@protected operator is used without defining auth @server",
    "trace": [
      "Query",
      "data",
      "@protected"
    ],
    "description": null
  }
]
