tests/snapshots/execution_spec__auth-protected-without-auth.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Query {
  data: String @const(data: "data") @protected
}
