tests/snapshots/execution_spec__auth.md_assert_1.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Haven't found auth parameters",
        "locations": [
          {
            "column": 3,
            "line": 2
          }
        ]
      }
    ]
  }
}
