tests/snapshots/execution_spec__auth.md_assert_2.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Auth validation failed",
        "locations": [
          {
            "column": 3,
            "line": 2
          }
        ]
      }
    ]
  }
}
