tests/snapshots/execution_spec__auth.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  data: String
}

scalar Url

schema {
  query: Query
}
