tests/snapshots/execution_spec__auth.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream @link(id: "htpasswd", src: ".htpasswd", type: Htpasswd) @link(id: "jwks", src: "jwks.json", type: Jwks) {
  query: Query
}

type Query {
  data: String @const(data: "data") @protected
}
