tests/snapshots/execution_spec__batching-disabled.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(baseURL: "http://jsonplaceholder.typicode.com", batch: {delay: 0, headers: [], maxSize: 100}, httpCache: true) {
  query: Query
}

type Query {
  user(id: Int!): User @http(path: "/users/{{args.id}}")
}

type User {
  id: Int
  name: String
  username: String
}
