tests/snapshots/execution_spec__batching-group-by.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "user": {
            "id": 1
          },
          "userId": 1
        },
        {
          "user": {
            "id": 2
          },
          "userId": 2
        }
      ]
    }
  }
}
